--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,4 +1,5 @@
 <app-task-item 
 (onDeleteTask)="deleteTask(task)"
+(onToggleReminder)="toggleReminder(task)"
 *ngFor="let task of tasks" 
 [task]="task"></app-task-item>
