--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,11 @@ body{
 .btn-block{
     display: block;
     width: 100%;
+    background-color: black;
+    color: white;
+    padding: 15px;
+    border: 0;
+    border-radius: 5px;
 }
 
 .add-form{
