--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,15 +1,15 @@
-<form class="add-form">
+<form class="add-form" (ngSubmit)="onSubmit()">
     <div class="form-control">
         <label for="text">Task</label>
-        <input type="text" name="text" id="text" placeholder="Add Text">
+        <input type="text" name="text" [(ngModel)]="text" id="text" placeholder="Add Text">
     </div>
     <div class="form-control">
         <label for="text">Day & Time</label>
-        <input type="text" name="day" id="day" placeholder="Add Day">
+        <input type="text" name="day" id="day" [(ngModel)]="day" placeholder="Add Day">
     </div>
     <div class="form-control form-control-check">
         <label for="reminder">Set Reminder</label>
-        <input type="checkbox" name="reminder" id="reminder">
+        <input type="checkbox" name="reminder" [(ngModel)]="reminder" id="reminder">
     </div>
     <input type="submit" value="Save task" class="btn-block">
 </form>
